<resources>
    <string name="app_name">StellarJet</string>
    <string name="login_button">Login</string>
    <string name="confirm_button">Confirm</string>
    <string name="login_title">Hello, and welcome to Stellarjet.</string>
    <string name="login_header">
        Please sign-in using your Email/Mobile Number.
    </string>
    <string name="login_accountId">Email/Mobile Number</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_forgot_passcode">Forgot Passcode?</string>
    <string name="password_header">Now enter your password to confirm your identity.</string>
    <string name="otp_title">OTP</string>
    <string name="otp_header">Please enter OTP, sent to your mobile \nnumber</string>
    <string name="authentication_title">Touch ID</string>
    <string name="authentication_header">Login using Touch ID &amp; access your \n account faster</string>
    <string name="authentication_cancel">Cancel</string>
    <string name="home_see_you_again">It\'s nice to see you again!</string>
    <string name="home_remaining_seats">You still have 24 seats available before you need to top up your credit.
    </string>
    <string name="home_remaining_seats_first_half">You still have</string>
    <string name="home_remaining_seats_second_half">seats available before you need to top up your credit.</string>
    <string name="home_button_book_flight">Book a Flight</string>
    <string name="home_title_hello_again_dummy">Hello again Ragav, Welcome back</string>
    <string name="home_title_hello_again">Hello again \n</string>
    <string name="home_title_hello">Hello \n</string>
    <string name="home_title_welcome_back">\nWelcome back</string>
    <string name="home_title_welcome">\nWelcome </string>
    <string name="home_booking_for">Booking for</string>
    <string name="home_booking_for_primary">Mr.Raghav Sekar</string>
    <string name="booking_from">Where are you flying from?</string>
    <string name="booking_from_dummy">Delhi Office</string>
    <string name="booking_from_city">Bangalore</string>
    <string name="booking_to">Where are you going to?</string>
    <string name="booking_to_dummy">Home</string>
    <string name="booking_to_city">New Delhi</string>
    <string name="booking_id">Booking Id</string>
    <string name="booking_airport_sample">HAL Airport</string>
    <string name="booking_trip_details_title">Trip Details</string>
    <string name="booking_source_where">Where are we picking you up from?</string>
    <string name="booking_destination_where">Where are we dropping you?</string>
    <string name="booking_source_or">Or</string>
    <string name="booking_somewhere_else">Somewhere else?</string>
    <string name="booking_source_dummy_one">Home</string>
    <string name="booking_source_dummy_two">Mumbai Apartment</string>
    <string name="booking_source_dummy_three">Delhi Office</string>
    <string name="booking_date_header">What day are we taking you?</string>
    <string name="booking_date_dummy">This Friday, 20 Sep - 7:45 am</string>
    <string name="booking_date_seats_available">4 seats available</string>
    <string name="booking_date_seats_no_flights">No Flights are available</string>
    <string name="booking_date_pick">Pick Your Date</string>
    <string name="booking_avail_cities">View available cities</string>
    <string name="booking_avail_cities_header">As of now our flight services are available \n or following cities
    </string>
    <string name="booking_seat_choose">Choose Your Seats</string>
    <string name="booking_confirm_seats">Confirm Seats</string>
    <string name="booking_confirm_seat">Confirm Seat</string>
    <string name="booking_confirm_date">Confirm Date</string>
    <string name="booking_row_airport">airport</string>
    <string name="booking_guest_title">Guest Info</string>
    <string name="booking_guest_header">Please provide guest details for the trip</string>
    <string name="booking_guest_confirm_button">Confirm GUEST</string>
    <string name="booking_guest_name">Guest Name</string>
    <string name="booking_guest_mobile_number">Mobile Number</string>
    <string name="booking_guest_food_preferences">Foodno preference</string>
    <string name="booking_guest_food_standard_menu">Standard Menu</string>
    <string name="booking_guest_food_call_them">Call them</string>
    <string name="booking_guest_dummy_one">1.Guest Name One</string>
    <string name="booking_guest_dummy_two">2.Guest Name Two</string>
    <string name="booking_guest_dummy_three">3.Guest Name Three</string>
    <string name="booking_summary_date">Date</string>
    <string name="booking_summary_departure_time">Departure Time</string>
    <string name="booking_summary_date_dummy">Wed, 27 11 2018</string>
    <string name="booking_summary_departure_time_dummy">07:30 hrs</string>
    <string name="booking_summary_done_personalize">You have personalized your preferences</string>
    <string name="please_personalize_your_preferences">Please personalize your preferences</string>
    <string name="booking_summary_need_personalize">Please personalize your preferences</string>
    <string name="booking_summary_cancel_ticket">You have cancelled the ticket.</string>
    <string name="booking_summary_personalize_time">Please update before 10-Dec-2018, 3:00 pm</string>
    <string name="booking_summary_personalize_time_expiry">Please update before</string>
    <string name="booking_summary_cancel_booking">Cancel Booking</string>
    <string name="booking_summary_feedback">Your Feedback</string>
    <string name="booking_summary_pickup">PICK UP FROM</string>
    <string name="booking_summary_pickup_name">Delhi Office</string>
    <string name="booking_summary_pickup_address">Abaya Heights, Raj Bahavan Road, Delhi</string>
    <string name="booking_summary_drop">DROP TO</string>
    <string name="booking_summary_drop_name">Home</string>
    <string name="booking_summary_drop_address">Snn Raj Serenity, Yelanahalli, Begur Road, Bangalore</string>
    <string name="booking_summary_day">Friday</string>
    <string name="booking_summary_date_time">18 Sep, 7:45 am</string>
    <string name="booking_summary_travelling_with">TRAVELLING WITH</string>
    <string name="booking_summary_passengers">Passengers</string>
    <string name="booking_summary_guest_names">Dimple , Shankar</string>
    <string name="booking_summary_booked_seats">Booked Seats</string>
    <string name="booking_summary_booked_seats_names">Golf, Hotel, Alpha, Bravo, Echo and Charlie</string>
    <string name="booking_summary_usual_service">Your usual in-flight service is fine?</string>
    <string name="booking_summary_button_fine">That’s Fine</string>
    <string name="booking_summary_button_change">I’d Like a Change</string>
    <string name="booking_summary_service_with">WITH</string>
    <string name="booking_summary_service_preferred">Your preferred service</string>
    <string name="booking_summary_service_usual">Usual Service</string>
    <string name="booking_summary_button_book_now">Confirm Booking</string>
    <string name="booking_summary_title_trip_details">Trip Details</string>
    <string name="booking_preferences_food_question">What do you like for breakfast?</string>
    <string name="booking_preferences_kit_question">Would you like to read in the \nmorning?</string>
    <string name="booking_preferences_update_preferences">Update Preferences</string>
    <string name="booking_success_confirmed">Your booking is\nconfirmed</string>
    <string name="booking_success_arrival_time">We will see you at Home at 6.45am, \n this Friday</string>
    <string name="booking_success_message">
        Please take a moment to personalise your booking by adding your pick-up and drop-off preferences and dining
        choice.
    </string>
    <string name="booking_success_contact_us">Contact Us</string>
    <string name="booking_success_contact_us_help_info">Contact us for any further assistance. We are \nhappy to help
        you
    </string>
    <string name="personalize">Personalize</string>
    <string name="personalize_message">This can be done at any time up to 4 hours before take off.</string>
    <string name="personalize_header">Please update preferences for the trip</string>
    <string name="personalize_cab_title">Pick-up and drop-off</string>
    <string name="personalize_food_title">Dining</string>
    <string name="personalize_later_button">I’ll come back to this</string>
    <string name="personalize_update_title">This can be done at any time up to\n</string>
    <string name="personalize_success">Thank you\nYour preferences are now finalised</string>
    <string name="personalize_success_safe_flight">We wish you a safe flight!</string>
    <string name="cab_personalize_pickup_title">Pick up</string>
    <string name="cab_personalize_drop_title">Drop</string>
    <string name="cab_personalize_optional_title">Optional</string>
    <string name="cab_personalize_pickup_location">Pick Up Location</string>
    <string name="cab_personalize_drop_location">Drop Location</string>
    <string name="cab_personalize_pickup_enter_location">Enter location</string>
    <string name="cab_personalize_update_button">Update</string>
    <string name="booking_title_food_preferences">Food Preferences</string>
    <string name="booking_title_kit_preferences">Kit Preferences</string>
    <string name="booking_title_next">Next</string>
    <string name="drawer_info_preferences">Preferences</string>
    <string name="drawer_info_buy_seats">Buy Seats</string>
    <string name="drawer_info_preferences_heading">Your preferences</string>
    <string name="drawer_info_boarding_pass">Boarding Pass</string>
    <string name="drawer_info_bookings">My Bookings</string>
    <string name="drawer_personal_assistance">Call Us</string>
    <string name="drawer_help">Contact us for any further assistance.\n We are happy to help you</string>
    <string name="address_set_pickup_location">Set pickup location</string>
    <string name="address_set_drop_location">Set drop location</string>
    <string name="passcode_title_hello_again">Hello again.</string>
    <string name="passcode_title_hello">Hello </string>
    <string name="passcode_title_create_passcode">Create Passcode</string>
    <string name="passcode_title_confirm_passcode">Confirm Passcode</string>
    <string name="passcode_title_enter_passcode">Enter Passcode</string>
    <string name="passcode_title_heading">Please enter your passcode</string>
    <string name="passcode_title_heading_confirm">Please confirm your passcode</string>
    <string name="passcode_title_heading_create">Please create your passcode</string>
    <string name="passcode_kwypad_one">1</string>
    <string name="passcode_kwypad_two">2</string>
    <string name="passcode_kwypad_three">3</string>
    <string name="passcode_kwypad_four">4</string>
    <string name="passcode_kwypad_five">5</string>
    <string name="passcode_kwypad_six">6</string>
    <string name="passcode_kwypad_seven">7</string>
    <string name="passcode_kwypad_eight">8</string>
    <string name="passcode_kwypad_nine">9</string>
    <string name="passcode_kwypad_zero">0</string>
    <string name="passcode_kwypad_del">X</string>
    <string name="biometric_thank_you">Thank you.</string>
    <string name="biometric_sub_heading">
        From now on, for speed and security, we’ll log you in using your Touch ID.
        \n\nPlease hold your finger
        over the button to confirm.
    </string>
    <string name="info_purchase_title">Purchase Seats</string>
    <string name="info_purchase_sub_heading">Now enter your required number of seats</string>
    <string name="info_purchase_required_seats">Required Seats</string>
    <string name="info_purchase_pay_amount">Total payable amount</string>
    <string name="info_purchase_buy_now">Buy Now</string>
</resources>