<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="100dp"
        tools:context=".TouchIdActivity">

    <TextView
            style="@style/StellarTextView_30sp"
            android:text="@string/login_title"
            android:id="@+id/textView"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/biometric_thank_you"
            style="@style/StellarTextView_18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview"
            android:layout_marginTop="50dp"/>
    <TextView
            style="@style/StellarTextView_16sp"
            android:layout_marginTop="24dp"
            android:text="@string/biometric_sub_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>