<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="27dp"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        tools:context=".drawer.DrawerActivity">

    <Button
            android:layout_gravity="end"
            android:id="@+id/button_drawer_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/ic_close" />

    <TextView
            android:id="@+id/textView_drawer_boarding_pass"
            style="@style/StellarTextView_20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="93dp"
            android:layout_marginEnd="8dp"
            android:text="@string/drawer_info_boarding_pass" />

    <TextView
            android:id="@+id/textView_drawer_bookings"
            style="@style/StellarTextView_20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="42dp"
            android:text="@string/drawer_info_bookings" />

    <TextView
            android:id="@+id/textView_drawer_preferences"
            style="@style/StellarTextView_20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="42dp"
            android:text="@string/drawer_info_preferences" />

    <View
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

    <Button
            android:background="@color/colorPersonalizeButtonBackground"
            android:text="@string/drawer_personal_assistance"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:id="@+id/button_drawer_personal_assistance"
            android:drawableStart="@drawable/ic_telephone"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            style="@style/StellarTextView_14sp"
            android:alpha="0.3"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/drawer_help"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>