<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:animateLayoutChanges="true"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:layout_marginStart="26dp"
              android:layout_marginEnd="26dp"
              android:fitsSystemWindows="true"
              tools:context=".login.LoginActivity">

    <TextView
            android:layout_marginTop="68dp"
            style="@style/StellarTextView_22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:gravity="center"
            android:text="@string/login_header"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    <TextView
            android:id="@+id/textView_account_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:alpha="0.5"
            android:text="@string/login_accountId"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    <EditText
            android:id="@+id/editText_account_id"
            style="@style/StellarEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/drawable_edittext_background"
            android:inputType="textPersonName"/>

    <Button
            android:id="@+id/btn_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            style="@style/StellarButton"
            android:text="@string/confirm_button" />

</LinearLayout>
