<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:animateLayoutChanges="true"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:layout_marginStart="26dp"
              android:layout_marginEnd="26dp"
              android:fitsSystemWindows="true"
              tools:context=".login.LoginActivity">

    <TextView
            android:layout_marginTop="68dp"
            style="@style/StellarTextView_22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:gravity="center"
            android:text="@string/password_header"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    <TextView
            android:id="@+id/textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:alpha="0.5"
            android:text="@string/login_password"
            android:textAllCaps="true"
            android:textColor="@android:color/white"/>

    <EditText
            android:id="@+id/editText_account_password"
            style="@style/StellarEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            style="@style/StellarButton"
            android:text="@string/login_button"/>

    <TextView
            style="@style/StellarTextView_14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login_forgot_password"
            android:textAllCaps="true"/>

</LinearLayout>
